Wed May 27 20:35:41 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: multilevel debug information (similar to other NUT
   binaries)

Mon May 25 19:53:02 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 * Enable timestamp on debug messages by default
   - common/common.c: prepend elapsed number of seconds and microseconds
     since start of program for upsdebug() messages,
   - drivers/upsdrvctl.c: inform people that adding debug flags to upsdrvctl
     is not the way to debug a driver,     
   - revert remainder of previous patch
   
Mon May 18 11:48:31 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * Enable timestamp on output messages (format "%H:%M:%S: msg")
   - common/common.c, include/common.h: modify vupslog() to allow optional
     appending of a timestamp on debug output,
   - clients/upsmon.c, drivers/main.c, drivers/upsdrvctl.c, server/upsd.c:
     enable timestamping using the "-T" option,
   - man/upsmon.8, man/nutupsdrv.8, man/upsdrvctl.8, man/upsd.8: document the
     timestamp option.

Thu May 14 19:19:52 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/baytechmib.h: add native NUT support for Baytech SNMP PDUs (RPCs),
 - drivers/snmp-ups.c: enable Baytech MIB,
 - drivers/Makefile.am: add the new MIB file,
 - data/driver.list: add the supported PDUs from BayTech,
 - man/snmp-ups.8: document the new MIB and devices.
   (patch from Scott Burns, Opengear)

Thu May 14 21:06:11 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/raritan-mib.h: use the outlets template mechanism and remove all
   the OIDs defines for a better readability
 - drivers/snmp-ups.c: enable Raritan MIB back.
 
Thu May 14 19:19:52 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - drivers/eaton-aphel-mib.h: use the outlets template mechanism.

Thu May 14 14:44:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - docs/configure.txt: a bit of completion and standardisation.
